chore: update Java version to 25 in README